# mw75-rs

./: Cargo.toml  README.md
macos/: Info.plist  sign-and-run.sh
src/: audio.rs  lib.rs  main.rs  mw75_client.rs  parse.rs  protocol.rs  rfcomm.rs  simulate.rs  types.rs
