[package]
name          = "mw75"
version       = "0.0.1"
edition       = "2021"
description   = "Rust client for MW75 Neuro EEG headphones over BLE + RFCOMM using btleplug"
keywords      = ["exg", "eeg", "mw75", "neuro", "bci"]
authors       = ["Eugene Hauptmann"]
license       = "GPL-3.0"
homepage      = "https://github.com/eugenehp/mw75"
repository    = "https://github.com/eugenehp/mw75"
documentation = "https://docs.rs/mw75"

# ── Library target ────────────────────────────────────────────────────────────

[lib]
name = "mw75"
path = "src/lib.rs"

# ── Binary targets ────────────────────────────────────────────────────────────

[[bin]]
name = "mw75"
path = "src/main.rs"

[[bin]]
name = "mw75-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "mw75-audio"
path = "src/bin/audio.rs"
required-features = ["audio"]

# ── Features ──────────────────────────────────────────────────────────────────
#
# default  — TUI only (no heavy Bluetooth deps beyond btleplug)
# tui      — ratatui + crossterm for the terminal UI
# rfcomm   — RFCOMM data transport for real EEG streaming.
#            Linux: bluer (BlueZ), macOS: IOBluetooth, Windows: WinRT.
# audio    — Linux-only: BlueZ A2DP pairing + PipeWire/PulseAudio sink routing
#            + rodio audio file playback.
#
# Usage examples:
#   cargo build                                 # TUI + simulation only
#   cargo build --features rfcomm               # TUI + real hardware
#   cargo build --features rfcomm,audio         # everything
#   cargo build --no-default-features           # library only

[features]
default = ["tui"]
tui     = ["dep:ratatui", "dep:crossterm"]
audio   = ["dep:bluer", "dep:rodio", "dep:tokio-stream"]
rfcomm  = ["dep:bluer", "dep:objc2", "dep:objc2-foundation", "dep:objc2-io-bluetooth", "dep:windows"]

# ── Core dependencies ─────────────────────────────────────────────────────────

[dependencies]
btleplug   = "0.11.8"
tokio      = { version = "1", features = ["full"] }
uuid       = { version = "1", features = ["v4"] }
futures    = "0.3"
log        = "0.4"
env_logger = "0.11"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
rand       = "0.9"

# ── Optional: TUI ─────────────────────────────────────────────────────────────

ratatui   = { version = "0.30.0", features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }

# ── Optional: audio playback ──────────────────────────────────────────────────

rodio        = { version = "0.19", optional = true }
tokio-stream = { version = "0.1", optional = true }

# ── Platform: Linux (BlueZ) — used by `audio` and `rfcomm` features ────────────

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["full"], optional = true }

# ── Platform: macOS (IOBluetooth) — used by `rfcomm` feature ──────────────────

[target.'cfg(target_os = "macos")'.dependencies]
objc2              = { version = "0.6", optional = true }
objc2-foundation   = { version = "0.3", optional = true }
objc2-io-bluetooth = { version = "0.3", optional = true }

# ── Platform: Windows (WinRT) — used by `rfcomm` feature ──────────────────────

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", optional = true, features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Networking_Sockets",
    "Storage_Streams",
] }

# ── Dev dependencies ──────────────────────────────────────────────────────────

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
